[fix] Fix subtitle position on mobile, or globaly when player ratio is different than video ratio. A new component, bitmapVideoWindow, is introduced for this purpose. Some code move from global plugin to more specific component scope.

--- a/src/plugin.css
+++ b/src/plugin.css
@@ -1,23 +1,28 @@
-.bitmapsub-container {
-  --drift: 0;
-  --control-bar-height: 30px;
-  display: none;
-  position: absolute;
-  padding: 2ch;
-  background-color: #0006;
-  left: 50%;
-  translate: -50%;
-  opacity: 0;
-  transition: opacity 0.1s, bottom 0.25s 0.25s;
-  transform-origin: bottom;
-  border-radius: 3px;
-  z-index: 1;
-  bottom: var(--drift);
+.bitmapsub-video-window {
+  --padding: 0px;
+  --adjustment: 0px;
+  position: relative;
+  justify-items: center;
   pointer-events: none;
+  display: none;
 }
 
-.vjs-has-started .bitmapsub-container {
-  display: inline-flex;
+.video-js.vjs-has-started .bitmapsub-video-window {
+  display: grid;
+}
+
+.bitmapsub-container {
+  border-radius: 3px;
+  opacity: 0;
+  transition: opacity 0.1s, bottom 0.2s 0.1s;
+  transform-origin: bottom;
+  z-index: 1;
+  pointer-events: none;
+  font-size: 36px;
+  padding: 1ch 2ch;
+  background-color: #0006;
+  position: absolute;
+  bottom: var(--padding);
 }
 
 .vjs-control-bar {
@@ -30,14 +35,14 @@
 }
 
 .video-js.vjs-paused .bitmapsub-container,
+.video-js.vjs-paused.vjs-fullscreen .bitmapsub-container,
 .video-js.vjs-user-active .bitmapsub-container,
 .video-js.vjs-user-active.vjs-fullscreen .bitmapsub-container {
-  bottom: calc(var(--control-bar-height) + var(--drift));
+  bottom: calc(var(--adjustment) + var(--padding));
 }
 
-.video-js.vjs-paused.vjs-fullscreen .bitmapsub-container,
 .video-js.vjs-fullscreen .bitmapsub-container {
-  bottom: var(--drift);
+  bottom: var(--padding);
 }
 
 .bitmapsub-container.vobsub .bitmap-subtitle {
